# moz-tech-reserva-de-nome

./: .env.sample  .gitignore  LICENSE  Procfile  README.md  manage.py  pyproject.toml
.github/workflows/: tests.yml
reserva/: asgi.py  settings.py  urls.py  wsgi.py
reserva/core/: admin.py  apps.py  forms.py  hash_id.py  managers.py  models.py  urls.py  views.py
reserva/core/fixtures/: nationalities.json
reserva/core/migrations/: 0001_crates_nationality_model.py  0002_crates_name_application_model.py  0003_adds_approval_fields_to_name_application_model.py  0004_change_dob_label.py  0005_remove_address_from_and_add_email_to_name_application_model.py  0006_creates_proxy_user_model.py  0007_sort_proxy_user_by_first_name.py  0008_add_status_to_name_application_model.py  0009_migrate_data_from_approved_to_status_field_in_name_application_model.py  0010_remove_approved_field_from_name_application_model.py
reserva/core/static/: styles.css
reserva/core/templates/: base.html  payment.html  request_name.html  request_performed.html  request_successful.html
reserva/core/templates/name_application/: check.html  done.html  pay.html  send.html  success.html
reserva/core/tests/: conftest.py  test_api_urls.py  test_api_views.py  test_general_urls.py  test_name_application_admin.py  test_name_application_form.py  test_name_application_model.py  test_name_application_views.py  test_nationality_model.py  test_user_model.py
reserva/core/urls/: api.py  name_application.py
reserva/core/views/: api.py  name_application.py
